<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">WELCOME TO PETSWITCH!</string>
    <string name="app_name">MobilePetSwitch</string>
 
    <string name="btnIntendS">TAKE PICTURE</string>
    <string name="btnIntendV">TAKE VIDEO</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="viewVideos">Videos</string>
    <string name="viewImages">Images</string>
    <string name="descone">PetSwitch is designed to bring a group of pet owners to help each other in taking care of 
        each other’s pets. The mobile application of PetSwitch uses the online application to allow users to contact 
        and co-operate with each other in taking care of their pets. In this application users can search for the 
        appropriate pet owners whom they can co-ordinate with to take care of the pets. They can send a request to 
        the pet owners and respond to requests sent by other pet owners. </string>
        
    
<!--     Search Tab -->
    <string name="slogan">
       <i><b><marquee behaviour="alternate">Bringing a Pet Owner Like You... To You!!!</marquee></b></i></string>
    <string name="searchby">SEARCH BY</string>
    <string name="enterkey">ENTER KEY</string>
    <string name="searchbutton">   SEARCH   </string>
    <string name="planet_prompt">Choose a planet</string>
    <string-array name="planets_array">
        <item><i>Zip</i></item>
        <item><i>City</i></item>
        <item><i>Location</i></item>
        <item><i>Pet Type</i></item>
    </string-array>
    
    
    
<!--     Request Form Page -->

	<string name="pettype">PET TYPE</string>
	<string name="petdesc">PET DESCRIPTION</string>
	<string name="reqstartdate">FROM</string>
	<string name="reqenddate">TO</string>
	<string name="req_message">MESSAGE</string>
	<string name="sendrequest">SEND REQUEST</string>
	
	
<!-- 	User Details after searching for pet sitters -->

	<string name="label_ss_load_start">SlideShow Started Loading</string>
    <string name="label_ss_load_end">SlideShow Ended Loading</string>
    <string name="label_slide_anim_start">Slide Animation Started</string>
    <string name="label_slide_anim_end">Slide Animation Ended</string>
    <string name="userdetails">USER DETAILS</string>
    
    <string name="comment">COMMENT:</string>
    <string name="take_photo">TAKE A PHOTO</string>
    <string name="take_video">TAKE A VIDEO</string>
    <string name="share">SHARE</string>
    <string name="pick_request">SHARE TO...</string>  

    
    <!--     Send SMS  -->
    
    <string name="sms_content_label">Message Body</string>
    <string name="sms_send_message">Send</string>
    
    
</resources>