<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/appBG"
    android:orientation="vertical" >
    

    <LinearLayout 
 	   android:layout_width="match_parent"
 	   android:layout_height="wrap_content"
 	   android:orientation="horizontal" >
    
 	   <TextView
 	       android:layout_width="0dip"
   		   android:layout_height="40dp"
   		   android:layout_weight="0.35"
   		   android:textColor="#000000"
   	 	   android:text="@string/searchby"/>

 	   <Spinner 
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.65" />
 	   
    </LinearLayout>

        <LinearLayout 
 	   android:layout_width="match_parent"
 	   android:layout_height="wrap_content"
 	   android:orientation="horizontal" >
    
 	   <TextView
 	       android:layout_width="0dip"
   		   android:layout_height="40dp"
   		   android:layout_weight="0.35"
   		   android:textColor="#ffffff"
   	 	   android:text="@string/enterkey"/>

       <EditText
	       android:id="@+id/searchkey"
	       style="@style/TextFieldStyle" 
           android:layout_weight="0.65" />
    
    </LinearLayout>
    
    <View
           android:layout_width="40sp"
           android:layout_height="20sp" />
    
    <Button 
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/searchbutton"
        android:onClick="gotoSelectedPetSitter"/>
    
</LinearLayout>