<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundwithlight" >

    
     <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:background="@drawable/title_bar">

        <Button
        android:id="@+id/back_requestform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:background="@drawable/back_button"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp" />

      
</RelativeLayout>
    
     <View
           android:layout_width="40sp"
           android:layout_height="20sp" />
    
    <LinearLayout 
 	   android:layout_width="match_parent"
 	   android:layout_height="wrap_content"
 	   android:orientation="vertical" >
    
 	   <TextView
   	 	   android:text="@string/pettype"
   	 	   style="@style/DescFont"/>

       <EditText
	       android:id="@+id/pet_type"
	       style="@style/TextFieldStyle" 
	       android:background="@drawable/rounded_edittext" />
       
	</LinearLayout>
	
    <View
           android:layout_width="40sp"
           android:layout_height="30sp" />

    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
    
	    <TextView
   	        android:text="@string/petdesc"
   	        style="@style/DescFont"/>

    	<EditText
	        android:id="@+id/pet_description" 
        	style="@style/TextFieldStyle"
        	android:background="@drawable/rounded_edittext" />
	
	</LinearLayout>
	
    <View
           android:layout_width="40sp"
           android:layout_height="10sp" />
    
    
    <TextView
   	        android:text="@string/reqstartdate"
   	        android:layout_gravity="top"
   	        style="@style/DescFont"/>
    
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    
	    
    	<EditText
	        android:id="@+id/req_startdate"
	        android:layout_width="0dp"
	        style="@style/TextFieldStyle"
	        android:layout_weight="0.4"
	        android:background="@drawable/rounded_edittext" />
    	
    	<ImageButton 
    	    android:id="@+id/select_start_date"
    	    android:layout_width="0dp"
    	    android:layout_height="35dp"
    	    android:layout_weight="0.15"
    	    android:src="@drawable/calender_month"/>
    	
    	<EditText
	        android:id="@+id/req_starttime"
	        android:layout_width="0dp"
	        style="@style/TextFieldStyle"
	        android:layout_weight="0.3"
	        android:background="@drawable/rounded_edittext" 
	        android:inputType="text"/>
    	
    	<ImageButton 
    	    android:id="@+id/select_start_time"
    	    android:layout_width="0dp"
    	    android:layout_height="35dp"
    	    android:layout_weight="0.15"
    	    android:src="@drawable/clock"/>
	
	</LinearLayout>
	
    
    <View
           android:layout_width="40sp"
           android:layout_height="10sp" />
	
     <TextView
   	        android:text="@string/reqenddate"
   	        style="@style/DescFont"/>
    
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    
	   
    	<EditText
	        android:id="@+id/req_enddate"
	        style="@style/TextFieldStyle"
	        android:background="@drawable/rounded_edittext" />
    	
    	<ImageButton 
    	    android:id="@+id/select_end_date"
    	    android:layout_width="wrap_content"
    	    android:layout_height="35dp"
    	    android:src="@drawable/calender_month"/>
    	
    	<EditText
	        android:id="@+id/req_endtime"
	        style="@style/TextFieldStyle" 
	        android:background="@drawable/rounded_edittext" />
    	
    	<ImageButton 
    	    android:id="@+id/select_end_time"
    	    android:layout_width="wrap_content"
    	    android:layout_height="35dp"
    	    android:src="@drawable/clock"/>
	
	</LinearLayout>
	
    <View
           android:layout_width="40sp"
           android:layout_height="10sp" />
    
    <LinearLayout 
 	   android:layout_width="match_parent"
 	   android:layout_height="wrap_content"
 	   android:orientation="vertical" >
    
 	   <TextView
   	 	   android:text="@string/req_message"
   	 	   style="@style/DescFont"/>

       <EditText
	       android:id="@+id/request_message"
           style="@style/MultiTextFieldStyle"
           android:background="@drawable/rounded_edittext" />
       
	</LinearLayout>
    
    <View
           android:layout_width="40sp"
           android:layout_height="20sp" />
    
    <Button 
        android:id="@+id/req_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sendrequest"
         android:background="@drawable/green_button"
        android:padding="10dp" />
    
</LinearLayout>